...
    <string name="address_create_title">Yeni adres</string>
    <string name="address_edit_title">Adresi d&#252;zenle</string>
    <string name="address_create_heading">Adres ekleyin</string>
    <string name="address_edit_heading">Adresi d&#252;zenleyin</string>
    <string name="address_form_explanation">Ad, soyad, açık adres ve şehir zorunludur. Mahalle, bina ve daire bilgisini ikinci adres satırına ekleyebilirsiniz.</string>
    <string name="address_country">&#220;lke</string>
    <string name="address_country_value">&#220;lke: Desteklenen b&#246;lge</string>
    <string name="address_first_name">Ad</string>
    <string name="address_last_name">Soyad</string>
    <string name="address_company">&#350;irket (iste&#287;e ba&#287;l&#305;)</string>
    <string name="address_line1">Adres sat&#305;r&#305; 1</string>
    <string name="address_line2">Adres sat&#305;r&#305; 2: mahalle, bina, daire (iste&#287;e ba&#287;l&#305;)</string>
    <string name="address_city">&#350;ehir / il&#231;e</string>
...
